# DistributedImgProcessor

./: CMakeLists.txt  README.md  client.cpp  client_functions.cpp  client_functions.h  server.cpp  server_functions.cpp  server_functions.h
